// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`description sprite roundtrip should describe the repacked sheet the same way 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read dds file <sandbox>/packed/ui/ui_test_sheet.dds",
    "File size: 16532 (16.1 KB)",
    "Metadata size: 148",
    "Data size: 16384 (16 KB)",
    "Size: 256 x 64",
    "Mipmap: 1 - 16",
    "Linear size: 16384",
    "Block size: 16",
    "Four CC: 894720068",
    "DXGI format: BC3_UNorm",
  ],
}
`;

exports[`description sprite roundtrip should pack the regions back into a sheet 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Packing for 1 files",
    "Packed 1 files",
  ],
}
`;

exports[`description sprite roundtrip should report the description packing and unpacking inputs as readable documents 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "unpack-description",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "base": "<resources>/gamedata/textures",
    "description": "<resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml",
    "destination": "<sandbox>/unpacked",
    "files": [],
    "isStrict": false,
  },
}
`;

exports[`description sprite roundtrip should report the description packing and unpacking inputs as readable documents 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "pack-description",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "base": "<sandbox>/unpacked",
    "description": "<resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml",
    "destination": "<sandbox>/packed",
    "files": [],
    "isStrict": false,
  },
}
`;

exports[`description sprite roundtrip should unpack every described region 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Workers: <workers> (auto)",
    "Unpacking texture descriptions: <resources>/gamedata/configs/ui/textures_descr/ui_test_sheet.xml, from <resources>/gamedata/textures to <sandbox>/unpacked",
    "Unpacking for 1 files",
    "Unpacked 1 files",
  ],
}
`;

exports[`description sprite roundtrip should write the expected files 1`] = `
[
  {
    "path": "pack.json",
    "sha256": "1198a27a62d271c70fd0687e5f4819ba09c1d75b59b0bc2e4db367444dcad4e6",
    "size": 735,
  },
  {
    "path": "packed/ui/ui_test_sheet.dds",
    "sha256": "6e47e1aa4712a7800af1290b2063f6a5cdb367976701034a4b9f8e2efdfddb04",
    "size": 16532,
  },
  {
    "path": "unpack.json",
    "sha256": "688c35b8809f77cdd63d4c6d66516a1c69b8bb6d5825e09157b8b2562c5d7c4d",
    "size": 750,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_end.dds",
    "sha256": "a07cacbd97c81a6cff05eb1955b121bbef7b4aabf8443512e7cf13a7527aae6e",
    "size": 4244,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_left.dds",
    "sha256": "8465624c2cad1d2486054856003ee6d275f53a36113059c36b972d512a1b44aa",
    "size": 4244,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_mid.dds",
    "sha256": "b01ac10e62d9f2c72831f0c1c5e44960e305cf869dbf33b1c5308047a23a5c26",
    "size": 4244,
  },
  {
    "path": "unpacked/ui/ui_test_sheet/ui_test_right.dds",
    "sha256": "49a5d63e0a75800599731341c7b078d1b97028e12a6d956f9bd5152e16f493b3",
    "size": 4244,
  },
]
`;
